--- a/index.html
+++ b/index.html
@@ -219,10 +219,17 @@
   <li><a href="#tag-{{ id }}"><span>{{ title }}</span></a></li>
 </script>
 <script id="template-author-link" type="text/x-handlebars-template">
-  <li><a href="# author-{{ id }}"><span>{{ title }}</span></a></li>
+  <li><a href="#author-{{ id }}"><span>{{ title }}</span></a></li>
 </script>
-<script id="##template-author-link" type="text/x-handlebars-template">
-  <li><a href="# author-{{ id }}"><span>{{ title }}</span></a></li>
+<script id="template-tag-cloud-link" type="text/x-handlebars-template">
+    {{#each tags}}
+    <li><a class="tag-size-{{ className }}" href="#tag-{{ tag }}"><span>{{ tag }}</span></a></li>
+    {{/each}}
+</script>
+<script id="template-authors-link" type="text/x-handlebars-template">
+	{{#each allAuthors}}
+	<li><a href="#author-{{ articleAuthor }}"><span>{{ articleAuthor }}</span></a> ({{count}}) </li>
+	{{/each}}
 </script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.1.0/handlebars.min.js"></script>
 <script src="js/script.js"></script>
